tests/suite/fail/generated/borrow/fail_move_eat_msg.ny
fn eat(x: string) -> void { print(x) }
fn main() {
    let msg = "hello"
    eat(msg)
    print(msg) //~ ERROR was moved
}
